--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret Santa</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Sorteo del Amigo Invisible</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Add any additional CSS libraries or frameworks you might be using -->
 </head>
 
 <body>
