--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const storedLanguage = sessionStorage.getItem('preferredLanguage');
-            currentLanguage = storedLanguage ? storedLanguage : 'es'; // Use stored language or default to Spanish
+            currentLanguage = storedLanguage ? storedLanguage : 'es';
             switchLanguage(currentLanguage);
             updateLanguageSwitcherText();
             restoreFromSessionStorage();
