deleted irelevant comments

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             if (sendEmailButton) {
                 sendEmailButton.addEventListener('click', function () {
-                    sendAssignmentsToServer(); // Pass currentLang if needed
+                    sendAssignmentsToServer();
                 });
             }
 
